--- a/app/src/main/res/layout/content_crop_roistep5.xml
+++ b/app/src/main/res/layout/content_crop_roistep5.xml
@@ -102,6 +102,7 @@
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
                         android:textAlignment="textEnd"
+                        android:paddingRight="@dimen/dimen_10dp"
                         android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -158,6 +159,7 @@
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
                         android:textAlignment="textEnd"
+                        android:paddingRight="@dimen/dimen_10dp"
                         android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -214,6 +216,7 @@
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
                         android:textAlignment="textEnd"
+                        android:paddingRight="@dimen/dimen_10dp"
                         android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -270,6 +273,7 @@
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
                         android:textAlignment="textEnd"
+                        android:paddingRight="@dimen/dimen_10dp"
                         android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
