--- a/app/src/main/res/navigation/predictiontools_nav_graph.xml
+++ b/app/src/main/res/navigation/predictiontools_nav_graph.xml
@@ -18,5 +18,14 @@
         android:id="@+id/revenueEstimatorStep1Fragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.predictiontools.RevenueEstimatorStep1Fragment"
         android:label="fragment_revenue_estimator_step1"
-        tools:layout="@layout/fragment_revenue_estimator_step1" />
+        tools:layout="@layout/fragment_revenue_estimator_step1" >
+        <action
+            android:id="@+id/action_revenueEstimatorStep1Fragment_to_revenueEstimatorStep2Fragment"
+            app:destination="@id/revenueEstimatorStep2Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/revenueEstimatorStep2Fragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.predictiontools.RevenueEstimatorStep2Fragment"
+        android:label="fragment_revenue_estimator_step2"
+        tools:layout="@layout/fragment_revenue_estimator_step2" />
 </navigation>
