added revenue estimator fragments

--- a/app/src/main/res/layout/activity_predictiontools_dashboard.xml
+++ b/app/src/main/res/layout/activity_predictiontools_dashboard.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activities.predictiontools.PredictionToolsDashboardActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -14,6 +19,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/predictiontools_nav_graph" />
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
