--- a/app/src/main/res/layout/fragment_crop_spraying.xml
+++ b/app/src/main/res/layout/fragment_crop_spraying.xml
@@ -118,7 +118,7 @@
                     android:orientation="horizontal">
 
                     <Spinner
-                        android:id="@+id/sp_crop_fertilizer_application_fertilizername"
+                        android:id="@+id/sp_crop_spray_name"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_centerVertical="true"
@@ -126,7 +126,7 @@
                         android:background="@android:color/transparent"
                         android:gravity="center"
                         android:layout_marginLeft="5dp"
-                        android:entries="@array/crop_fertilizer_form"
+                        android:entries="@array/crop_spray_type"
                         android:spinnerMode="dropdown"/>
 
                     <ImageView
@@ -272,7 +272,7 @@
                     android:layout_marginStart="12dp"
                     android:orientation="horizontal">
 
-                    <EditText
+                    <Spinner
                         android:id="@+id/sp_crop_spraying_reminders"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -309,7 +309,7 @@
                     android:background="@android:color/transparent"
                     android:inputType="number"
                     android:textSize="14sp"
-                    android:hint="Amount Used" />
+                    android:hint="Days Before" />
 
                 <TextView
                     android:id="@+id/txt_crop_fertilizer_application_days_beforee"
@@ -317,7 +317,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/edittext_right_corners_green"
                     android:textColor="@color/white"
-                    android:text="Before"
+                    android:text="Day"
                     android:textSize="14sp"
                     android:gravity="center"
                     android:layout_weight="0.2" />
@@ -333,8 +333,8 @@
                 android:layout_marginTop="5dp"
                 android:backgroundTint="@color/colorPrimary"
                 android:drawableTint="#ffffff"
-                android:text="Save "
-                android:textAllCaps="false"
+                android:text="Submit "
+                android:textAllCaps="true"
                 android:textColor="#ffffff"
                 android:background="@drawable/rounded_corners_button"
                 android:layout_marginBottom="@dimen/dimen_20dp"/>
